kubernetes/apps/paperless-drali/tika/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  namespace: paperless-drali
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tika
  template:
    metadata:
      labels:
        app: tika
    spec:
      containers:
        - name: tika
          image: apache/tika:latest
          resources:
            requests:
              memory: 256Mi
              cpu: "100m"
            limits:
              memory: 1Gi
