kubernetes/apps/paperless-drali/tika/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tika
  namespace: paperless-drali
spec:
  selector:
    app: tika
  ports:
    - port: 9998
