kubernetes/apps/paperless-drali/tika/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tika
  namespace: paperless-drali
spec:
  podSelector:
    matchLabels:
      app: tika
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: paperless
      ports:
        - port: 9998
